# PyElegant

./: %S-%03LD.W1  .gitignore  Example_Elegant_Matrices_and_maps.ipynb  README.rst  TestNotebookPyElegantandSDDS.ipynb  Untitled.ipynb  matrix.txt  pyproject.toml  run.sh  run_pelegant_in_container.sh  temp-001.w1  temp-001.w2  temp.cen  temp.done  temp.ele  temp.mag  temp.mat  temp.params  temp.sdds  temp.twi  temp_particles_input.txt  testplain.txt
.ipynb_checkpoints/: Example_003_Multiple_Particle_Tracking_and_Plots-checkpoint.ipynb  Example_Elegant_Twiss_with_sddsplot-checkpoint.ipynb  TestNotebookPyElegantandSDDS-checkpoint.ipynb  Untitled-checkpoint.ipynb
notebooks/: Example_003_Multiple_Particle_Tracking_and_Plots.ipynb  Example_004_FFT_islands.ipynb  Example_006_Islands.ipynb  Example_Elegant_Twiss_with_sddsplot.ipynb  FODO_Jernej_non_symplectic.lte  FODO_Jernej_symplectic.madx  TestNotebookPyElegantandSDDS.ipynb  test.seq
pyelegant/: ElegantCommand.py  ElegantRun.py
pyelegant/SDDSTools/: SDDS.py  SDDSTools.py  Utils.py
pyelegant/report/: NaffTools.py  plottools.py
tests/: test_pyelegant.py
