[tool.poetry]
name = "PyElegant"
version = "0.1.0"
description = ""
authors = ["Tom Mertens <tom.mertens@helmholtz-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
pandas = "^1.2.0"
dask = "^2020.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
